# picasso

./: LICENSE
.github/workflows/: client.yml  frontend.yml
backend/: .env.example  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  prestart.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2024_11_02_0630-2cb4ce5113c7_increase_img_id_size_in_style_filter_.py  2024_11_02_0733-f16f72bfffc4_add_reported_filter_list_column_in_user_.py
backend/app/: app_prestart.py  main.py
backend/app/api/: __init__.py  auth.py  style_filter.py
backend/app/core/: exceptions.py  logger.py  responses.py  settings.py
backend/app/crud/: __init__.py  magic_link.py  style_filter.py  user.py
backend/app/db/: base.py
backend/app/db/models/: __init__.py  magic_link.py  style_filter.py  user.py
backend/app/schemas/: __init__.py  query.py  style_filter.py  user.py
backend/app/schemas/http/: __init__.py  auth.py  base.py  style_filter.py
backend/app/utils/: __init__.py  auth.py  email.py  enums.py  filter_storage.py
backend/docs/: sqlalchemy.md
client/: .gitignore  jest.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json
client/.husky/: pre-commit  pre-push
client/.storybook/: test-runner.ts
client/src/__tests__/e2e/: example.spec.ts  home.spec.ts
client/src/__tests__/pages/: page.spec.tsx
client/src/app/: layout.tsx
frontend/: .eslintignore  .eslintrc.json  .gitignore  .prettierrc  README.md  components.json  eslint.config.mjs  next.config.mjs  orval.config.ts  package.json  pnpm-lock.yaml  swagger.json  tailwind.config.ts  web-components.d.ts
frontend/.husky/: pre-commit  pre-push
frontend/.storybook/: main.ts
frontend/docs/: questions.md
frontend/src/: middleware.ts
frontend/src/__tests__/pages/: page.test.tsx
frontend/src/actions/: auth.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/(auth)/login/: loading.tsx  page.tsx
frontend/src/app/(auth)/login/[magicLinkToken]/: page.tsx  route.ts
frontend/src/app/(auth)/signup/: page.tsx
frontend/src/components/hero/: FadingHero.tsx  HowItWorksExample.tsx
frontend/src/components/shared/: Button.tsx  DropdownMenu.tsx  Form.tsx  Input.tsx  Label.tsx  Loader.tsx  LogoutButton.tsx  Navbar.tsx  RootProviders.tsx  Sheet.tsx  Toast.tsx  Toaster.tsx
frontend/src/hooks/: form.tsx  toast.tsx
frontend/src/lib/: safe-action.ts
frontend/src/utils/: auth.ts  http.ts  styles.ts
server/: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
server/alembic/versions/: 2024_09_13_1739-ef1d8bc855f6_initial.py  2024_09_14_0630-8da3299ecd92_initial.py  2024_09_14_1446-c0680c23b660_initial.py  2024_11_01_0415-6f73ef3ce735_initial.py  2024_11_01_1733-278dff1e363f_add_created_at_and_updated_at_columns_.py
server/app/: app_prestart.py  main.py
server/app/api/: __init__.py  auth.py  example.py  style_filters.py  test.py
server/app/core/: __init__.py  config.py  exceptions.py  logger.py  responses.py  settings.py
server/app/crud/: __init__.py  magic_link.py  style_filters.py  user.py
server/app/db/: base.py
server/app/db/models/: __init__.py  magic_link.py  style_filter.py  user.py
server/app/schemas/: __init__.py  auth.py  query.py  user.py
server/app/schemas/http/: __init__.py  base.py  style_filter.py
server/app/tests/api/: example_test.py  test_test.py
server/app/utils/: __init__.py  auth.py  email.py  enums.py  filter_storage.py
