[tool.poetry]
name = "picasso_backend"
version = "0.1.0"
description = ""
authors = ["AkashSDas <aakashdas368@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.114.0"
sqlalchemy = "^2.0.34"
alembic = "^1.13.2"
uvicorn = "^0.30.6"
asyncpg = "^0.29.0"
pydantic-settings = "^2.4.0"
asgi-correlation-id = "^4.3.3"
httpx = "^0.27.2"
pytest = "^8.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
